syntax = "proto3";

package game;

// 위치 정보 업데이트
message LocationUpdatePayload {
  float x = 1;
  float y = 2;
}

message LocationUpdate {
  repeated UserLocation users = 1;

  message UserLocation {
      string id = 1;
      uint32 playerId = 2;
      float x = 3;
      float y = 4;
  }
}

message PositionVelocity {
  float velocityX = 1;
  float velocityY = 2;
}

message Disconnect {
}

message OnCollision {
  float x0 = 1;
  float y0 = 2;
  float x1 = 3;
  float y1 = 4;
}
